#134 Set tabindex on bibliography modal-body so it can be scrolled with a keyboard. Prevent covered focus outline.

--- a/src/scss/components/modal/_bibliography.scss
+++ b/src/scss/components/modal/_bibliography.scss
@@ -40,6 +40,15 @@
 			padding-top: $form-group-margin;
 			border-bottom: $border-width solid $modal-border-color;
 		}
+
+		// Prevent covered outline
+		@include mouse-keyboard-and-bp-up(md) {
+			@include state(".modal-body:focus .citation-options") {
+				top: $outline-width;
+				padding-top: $form-group-margin - $outline-width;
+				margin-bottom: $outline-width;
+			}
+		}
 	}
 
 	.style-selector-container {
